force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Cache_Read_Tokens__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cache_Read_Tokens__c</fullName>
    <description>Prompt tokens served from the provider's cache, which bill at roughly a tenth of full rate. The artifact-first prefix reorder exists to make this number large, so it is the number that says whether it is working. Written by: Receipt, summed from the provider's own usage block. Read by: nobody in the pass - TELEMETRY IS OBSERVATION AND NO BRANCH MAY READ IT, so a number that is wrong can never be a run that is wrong.</description>
    <label>Cache Read Tokens</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>