force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Cache_State__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cache_State__c</fullName>
    <description>COLD or WARM, derived from whether any call on the pass reported cache-read tokens. Rerunning the same frozen transcript warms provider caches, a warm read is not a cold read, and a warm rerun reported as cold performance is the exact dishonesty the twenty-eighth stamp's labelling rule exists to prevent. Written by: AAO_Receipt.</description>
    <label>Cache State</label>
    <type>Text</type>
    <length>8</length>
</CustomField>