force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Cache_Write_Tokens__c.field-meta.xml
<CustomField>
    <fullName>AAO_Cache_Write_Tokens__c</fullName>
    <description>Prompt tokens written INTO the cache, which bill above full rate once so later calls can bill below it. Reported where the provider returns it; zero where it does not. Written by: Receipt, summed from the provider's own usage block. Read by: nobody in the pass - TELEMETRY IS OBSERVATION AND NO BRANCH MAY READ IT, so a number that is wrong can never be a run that is wrong.</description>
    <label>Cache Write Tokens</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>