force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Callouts__c.field-meta.xml
<CustomField>
    <fullName>AAO_Callouts__c</fullName>
    <description>Model calls made across the pass. The arithmetic the twenty-seventh stamp set the target against: a clean transcript is call 0, two reads, zero resolution calls and call 3 batched, so the count follows unresolved people rather than pairs or headcount. Written by: AAO_Receipt.</description>
    <label>Callouts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>