force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Charter_Versions__c.field-meta.xml
<CustomField>
    <fullName>AAO_Charter_Versions__c</fullName>
    <description>Every charter and version that ran on this pass, one per line, as the calls themselves reported them. A run whose numbers cannot be attributed to a charter version cannot be compared with another run, which is what makes this telemetry rather than trivia. Written by: AAO_Receipt.</description>
    <label>Charter Versions</label>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>