force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_First_Stage_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_First_Stage_At__c</fullName>
    <description>When the first stage of this pass finished. With the last-stage stamp it bounds the pass in wall-clock time across its several transactions, which no single transaction can measure from inside itself. Written by: AAO_Receipt.</description>
    <label>First Stage At</label>
    <type>DateTime</type>
</CustomField>