force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Input_Tokens__c.field-meta.xml
<CustomField>
    <fullName>AAO_Input_Tokens__c</fullName>
    <description>Prompt tokens billed at full rate, summed across every model callout the run made. Cache-read tokens are NOT in this number and are carried separately, because they bill at roughly a tenth and adding them would make a cheap run look expensive. Written by: Receipt, summed from the provider's own usage block. Read by: nobody in the pass - TELEMETRY IS OBSERVATION AND NO BRANCH MAY READ IT, so a number that is wrong can never be a run that is wrong.</description>
    <label>Input Tokens</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>