force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Last_Stage_At__c.field-meta.xml
<CustomField>
    <fullName>AAO_Last_Stage_At__c</fullName>
    <description>When the most recent stage of this pass finished. THE LAST-EVIDENCE-CONSIDERED TIMESTAMP FEEDS FROM THIS (twenty-ninth stamp), which is what a flag needs to say how stale its own silence is. Written by: AAO_Receipt.</description>
    <label>Last Stage At</label>
    <type>DateTime</type>
</CustomField>