force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Normalizer_Version__c.field-meta.xml
<CustomField>
    <fullName>AAO_Normalizer_Version__c</fullName>
    <description>The normalizer stamp of the artifact this pass read, copied from the Source so the receipt stays readable after the Source is archived. Byte offsets mean nothing against other bytes, so the normalizer that produced them is part of what a timing means. Written by: AAO_Receipt.</description>
    <label>Normalizer Version</label>
    <length>64</length>
    <type>Text</type>
</CustomField>