force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AAO_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal, denormalised off the Source so the Run Inspector can find a run&apos;s receipt in one query from the record page. Written by: AAO_Receipt. Read by: AAO_RunInspector.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AAO Run Receipts</relationshipLabel>
    <relationshipName>AAO_Run_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>