force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Run_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Run_Key__c</fullName>
    <description>The pass this receipt is for, carried as text to join AAO_Pair__c.AAO_Run_Key__c, whose own description anticipated this object: "carried as text now so the receipt can join later without backfilling a corpus". Written by: AAO_Receipt. Read by: the Run Inspector's performance panel.</description>
    <label>Run Key</label>
    <type>Text</type>
    <length>32</length>
    <required>true</required>
</CustomField>