force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source__c</fullName>
    <description>The artifact this pass read. THE ROW EXISTING IS THE DID-WE-READ-IT RECORD: a Source with a receipt and zero claims was read and established nothing, which is a completely different fact from never having been read, and no other row in the system can tell them apart. Written by: AAO_Receipt.</description>
    <label>Source</label>
    <referenceTo>AAO_Source__c</referenceTo>
    <relationshipLabel>Run Receipts</relationshipLabel>
    <relationshipName>Run_Receipts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>