force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Split_Events__c.field-meta.xml
<CustomField>
    <fullName>AAO_Split_Events__c</fullName>
    <description>How many times a stage completed its remaining work in a continuation rather than in one transaction. The twenty-ninth stamp requires every split to journal itself, &quot;in the report now, in the receipt when it exists&quot;; this is that field. Written by: AAO_Receipt.</description>
    <label>Split Events</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>