force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Stage_Count__c.field-meta.xml
<CustomField>
    <fullName>AAO_Stage_Count__c</fullName>
    <description>How many stage legs this receipt carries. A pass that stopped early carries fewer, which is how a partial run is visible without parsing the JSON. Written by: AAO_Receipt.</description>
    <label>Stage Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>