force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Stages__c.field-meta.xml
<CustomField>
    <fullName>AAO_Stages__c</fullName>
    <description>The per-stage legs as a JSON array, one entry per stage of the pass, in the order they ran: stage, wall milliseconds, callouts and worst single callout, SOQL, DML, DML rows, CPU and heap against their limits, COLD or WARM, split events, and what the stage produced. EVERY NUMBER IS READ IN THE SAME TRANSACTION AS THE WORK IT DESCRIBES, because a limit reading taken from another transaction is a reading of nothing. Written by: AAO_Receipt. Read by: the Run Inspector's performance panel, which shows these and never recomputes.</description>
    <label>Stages</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>