force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Synthetic__c.field-meta.xml
<CustomField>
    <fullName>AAO_Synthetic__c</fullName>
    <description>Test-authored, marked at birth so a suite cannot leave rows a report would count as a real pass. The same mark every AAO object carries. Written by: AAO_Receipt, from AAO_Synthetic.MARK.</description>
    <label>Synthetic</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>