force-app/main/default/objects/AAO_Run_Receipt__c/fields/AAO_Worst_Callout_Ms__c.field-meta.xml
<CustomField>
    <fullName>AAO_Worst_Callout_Ms__c</fullName>
    <description>The single slowest model callout of the whole pass, which is the number that gets measured against the 120-second per-transaction ceiling and the 90-second split trigger. A standing obligation on every run report since the twenty-eighth stamp, now recorded rather than retyped. Written by: AAO_Receipt.</description>
    <label>Worst Callout Ms</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>